--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
-
+    <link rel="shortcut icon" href="{% static 'images/tinaco.png' %}" type="png">
     <title>Tinacos Felices! 😁</title>
 
 <!--
@@ -58,19 +58,19 @@ https://templatemo.com/tm-543-breezed
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
-                            <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
-                            <li class="scroll-to-section"><a href="#about">About</a></li>
+                            <li class="scroll-to-section"><a href="#top" class="active">Inicio</a></li>
+                            <li class="scroll-to-section"><a href="#about">Llenado</a></li>
                             <li class="scroll-to-section"><a href="#projects">Projects</a></li>
                             <li class="submenu">
                                 <a href="javascript:;">Drop Down</a>
                                 <ul>
-                                    <li><a href="">About Us</a></li>
+                                    <li><a href="">Llenado</a></li>
                                     <li><a href="">Features</a></li>
                                     <li><a href="">FAQ's</a></li>
                                     <li><a href="">Blog</a></li>
                                 </ul>
                             </li>
-                            <li class="scroll-to-section"><a href="#contact-us">Contact Us</a></li> 
+                            <li class="scroll-to-section"><a href="#contact-us">Contactanos</a></li> 
                             <div class="search-icon">
                                 <a href="#search"><i class="fa fa-search"></i></a>
                             </div>
@@ -107,10 +107,10 @@ https://templatemo.com/tm-543-breezed
             <div class="img-fill">
                 <img src="assets/images/slide-01.jpg" alt="">
                 <div class="text-content">
-                  <h3>Welcome To Breezed</h3>
-                  <h5>New Bootstrap Template</h5>
-                  <a href="#" class="main-stroked-button">Learn More</a>
-                  <a href="#" class="main-filled-button">Get It Now</a>
+                  <h3>Bienvenido a Tinacos Felices!</h3>
+                  <h5>Aquí podrás controlar tu sistema de llenado.</h5>
+                  <a href="#" class="main-stroked-button">Aprende más!</a>
+                  <a href="#" class="main-filled-button">Vamos allá!</a>
                 </div>
             </div>
           </div>
@@ -120,10 +120,10 @@ https://templatemo.com/tm-543-breezed
             <div class="img-fill">
                 <img src="assets/images/slide-02.jpg" alt="">
                 <div class="text-content">
-                  <h3>Integrated Marketing Media</h3>
-                  <h5>Best Digital Marketing</h5>
-                  <a href="#" class="main-stroked-button">Read More</a>
-                  <a href="#" class="main-filled-button">Take Action</a>
+                  <h3>Toma el control de tu llenado!</h3>
+                  <h5>De manera rápida y eficaz.</h5>
+                  <a href="#" class="main-stroked-button">Aprende más!</a>
+                  <a href="#" class="main-filled-button">Vamos allá!</a>
                 </div>
             </div>
           </div>
@@ -133,10 +133,10 @@ https://templatemo.com/tm-543-breezed
             <div class="img-fill">
                 <img src="assets/images/slide-03.jpg" alt="">
                 <div class="text-content">
-                  <h3>High Performance</h3>
-                  <h5>Robust and Speedy</h5>
-                  <a href="#" class="main-stroked-button">Learn More</a>
-                  <a href="#" class="main-filled-button">Get It Now</a>
+                  <h3>Monitorealo generando reportes PDF!</h3>
+                  <h5>Manejo de alta fidelidad</h5>
+                  <a href="#" class="main-stroked-button">Aprende más!</a>
+                  <a href="#" class="main-filled-button">Generalo ya!</a>
                 </div>
             </div>
           </div>
@@ -153,8 +153,8 @@ https://templatemo.com/tm-543-breezed
                 <div class="col-lg-6 col-md-6 col-xs-12">
                     <div class="left-text-content">
                         <div class="section-heading">
-                            <h6>About Us</h6>
-                            <h2>We work with top brands and startups</h2>
+                            <h6>Área de llenado</h6>
+                            <h2>Puedes llenar tu tinaco desde internet.</h2>
                         </div>
                         <div class="row">
                             <div class="col-md-6 col-sm-6">
