--- a/api/templates/signup.html
+++ b/api/templates/signup.html
@@ -9,22 +9,23 @@
     <meta name="description" content="Colorlib Templates">
     <meta name="author" content="Colorlib">
     <meta name="keywords" content="Colorlib Templates">
-
+    <link rel="shortcut icon" href="{% static 'images/tinaco.png' %}" type="png">
     <!-- Title Page-->
-    <title>Au Register Forms by Colorlib</title>
+    <title>Registrate ahora!</title>
 
     <!-- Icons font CSS-->
-    <link href="vendor/mdi-font/css/material-design-iconic-font.min.css" rel="stylesheet" media="all">
-    <link href="vendor/font-awesome-4.7/css/font-awesome.min.css" rel="stylesheet" media="all">
+    <link href="{% static 'vendor/mdi-font/css/material-design-iconic-font.min.css' %}" rel="stylesheet" media="all">
+    <link href="{% static 'vendor/font-awesome-4.7/css/font-awesome.min.css'%}" rel="stylesheet" media="all">
     <!-- Font special for pages-->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i"
+        rel="stylesheet">
 
     <!-- Vendor CSS-->
-    <link href="vendor/select2/select2.min.css" rel="stylesheet" media="all">
-    <link href="vendor/datepicker/daterangepicker.css" rel="stylesheet" media="all">
+    <link href="{% static 'vendor/select2/select2.min.css'%}" rel="stylesheet" media="all">
+    <link href="{% static 'vendor/datepicker/daterangepicker.css'%}" rel="stylesheet" media="all">
 
     <!-- Main CSS-->
-    <link href="css/main.css" rel="stylesheet" media="all">
+    <link href="{% static 'css/main.css'%}" rel="stylesheet" media="all">
 </head>
 
 <body>
@@ -33,15 +34,25 @@
             <div class="card card-1">
                 <div class="card-heading"></div>
                 <div class="card-body">
-                    <h2 class="title">Registration Info</h2>
+                    <h2 class="title">Registrate en tinacos felices!</h2>
                     <form method="POST">
                         <div class="input-group">
-                            <input class="input--style-1" type="text" placeholder="NAME" name="name">
+                            <input class="input--style-1" type="text" placeholder="Nombre" name="name">
+                        </div>
+                        <div class="input-group">
+                            <input class="input--style-1" type="text" placeholder="Apellido Paterno" name="name">
+                        </div>
+                        <div class="input-group">
+                            <input class="input--style-1" type="text" placeholder="Apellido Materno" name="name">
+                        </div>
+                        <div class="input-group">
+                            <input class="input--style-1" type="text" placeholder="Correo" name="name">
                         </div>
                         <div class="row row-space">
                             <div class="col-2">
                                 <div class="input-group">
-                                    <input class="input--style-1 js-datepicker" type="text" placeholder="BIRTHDATE" name="birthday">
+                                    <input class="input--style-1 js-datepicker" type="text"
+                                        placeholder="Fecha de nacimiento" name="birthday">
                                     <i class="zmdi zmdi-calendar-note input-icon js-btn-calendar"></i>
                                 </div>
                             </div>
@@ -49,10 +60,10 @@
                                 <div class="input-group">
                                     <div class="rs-select2 js-select-simple select--no-search">
                                         <select name="gender">
-                                            <option disabled="disabled" selected="selected">GENDER</option>
-                                            <option>Male</option>
-                                            <option>Female</option>
-                                            <option>Other</option>
+                                            <option disabled="disabled" selected="selected">Género</option>
+                                            <option>Masculino</option>
+                                            <option>Femenino</option>
+                                            <option>Prefiero no decirlo</option>
                                         </select>
                                         <div class="select-dropdown"></div>
                                     </div>
@@ -62,10 +73,12 @@
                         <div class="input-group">
                             <div class="rs-select2 js-select-simple select--no-search">
                                 <select name="class">
-                                    <option disabled="disabled" selected="selected">CLASS</option>
-                                    <option>Class 1</option>
-                                    <option>Class 2</option>
-                                    <option>Class 3</option>
+                                    <option disabled="disabled" selected="selected">Capacidad de Tinaco</option>
+                                    <option>450 L</option>
+                                    <option>600 L</option>
+                                    <option>750 L</option>
+                                    <option>1100 L</option>
+                                    <option>2500 L</option>
                                 </select>
                                 <div class="select-dropdown"></div>
                             </div>
@@ -73,12 +86,16 @@
                         <div class="row row-space">
                             <div class="col-2">
                                 <div class="input-group">
-                                    <input class="input--style-1" type="text" placeholder="REGISTRATION CODE" name="res_code">
+                                    <input class="input--style-1" type="text" placeholder="Código de Tinaco"
+                                        name="res_code">
                                 </div>
                             </div>
                         </div>
+                        <div class="">
+                            <a href="{%url 'Login'%}">Inicia Sesión aquí</a>
+                        </div>
                         <div class="p-t-20">
-                            <button class="btn btn--radius btn--green" type="submit">Submit</button>
+                            <button class="btn btn--radius btn--green" type="submit">Registrarte</button>
                         </div>
                     </form>
                 </div>
@@ -87,14 +104,14 @@
     </div>
 
     <!-- Jquery JS-->
-    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="{% static 'vendor/jquery/jquery.min.js'%}"></script>
     <!-- Vendor JS-->
-    <script src="vendor/select2/select2.min.js"></script>
-    <script src="vendor/datepicker/moment.min.js"></script>
-    <script src="vendor/datepicker/daterangepicker.js"></script>
+    <script src="{% static 'vendor/select2/select2.min.js'%}"></script>
+    <script src="{% static 'vendor/datepicker/moment.min.js'%}"></script>
+    <script src="{% static 'vendor/datepicker/daterangepicker.js'%}"></script>
 
     <!-- Main JS-->
-    <script src="js/global.js"></script>
+    <script src="{% static 'js/global.js' %}"></script>
 
 </body><!-- This templates was made by Colorlib (https://colorlib.com) -->
 
