--- a/api/templates/signup.html
+++ b/api/templates/signup.html
@@ -19,10 +19,18 @@
     <!-- Font special for pages-->
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i"
         rel="stylesheet">
-
+    <script src="{% static 'js/formularios.js' %}"></script>
     <!-- Vendor CSS-->
     <link href="{% static 'vendor/select2/select2.min.css'%}" rel="stylesheet" media="all">
     <link href="{% static 'vendor/datepicker/daterangepicker.css'%}" rel="stylesheet" media="all">
+    <!-- Add these lines to your HTML template -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+    <!-- Agrega SweetAlert CDN en tu archivo HTML -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10">
+    </link>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+
 
     <!-- Main CSS-->
     <link href="{% static 'css/main.css'%}" rel="stylesheet" media="all">
@@ -36,53 +44,80 @@
                 <div class="card-body">
                     <h2 class="title">Registrate en tinacos felices!</h2>
                     <form method="POST">
+                        {% csrf_token %}
+
+                        {% if messages %}
+                        {% for message in messages %}
+                        <script>
+                            document.addEventListener('DOMContentLoaded', function () {
+                                const messageType = "{{ message.tags }}";
+                                let icon, text;
+
+                                switch (messageType) {
+                                    case 'success':
+                                        icon = 'success';
+                                        text = "{{ message }}";
+                                        break;
+                                    case 'error':
+                                        icon = 'error';
+                                        text = "{{ message }}";
+                                        break;
+                                    case 'warning':
+                                        icon = 'warning';
+                                        text = "{{ message }}";
+                                        break;
+                                    default:
+                                        icon = 'info';
+                                        text = "{{ message }}";
+                                        break;
+                                }
+
+                                Swal.fire({
+                                    icon: icon,
+                                    title: text,
+                                    confirmButtonText: 'OK'
+                                });
+                            });
+                        </script>
+                        {% endfor %}
+                        {% endif %}
+
                         <div class="input-group">
-                            <input class="input--style-1" type="text" placeholder="Nombre" name="name">
+                            <input class="input--style-1" type="text" placeholder="Nombre" name="nombreForm"
+                                id="nombre">
                         </div>
                         <div class="input-group">
-                            <input class="input--style-1" type="text" placeholder="Apellido Paterno" name="name">
+                            <input class="input--style-1" type="text" placeholder="Apellido Paterno"
+                                name="aPaternoForm">
                         </div>
                         <div class="input-group">
-                            <input class="input--style-1" type="text" placeholder="Apellido Materno" name="name">
+                            <input class="input--style-1" type="text" placeholder="Apellido Materno"
+                                name="aMaternoForm">
                         </div>
                         <div class="input-group">
-                            <input class="input--style-1" type="text" placeholder="Correo" name="name">
+                            <input class="input--style-1" type="text" placeholder="Correo" name="CorreoForm"
+                                id="correo">
+                        </div>
+                        <div class="input-group">
+                            <input class="input--style-1" type="text" placeholder="Contraseña" name="PswdForm" id="psw">
                         </div>
                         <div class="row row-space">
-                            <div class="col-2">
-                                <div class="input-group">
-                                    <input class="input--style-1 js-datepicker" type="text"
-                                        placeholder="Fecha de nacimiento" name="birthday">
-                                    <i class="zmdi zmdi-calendar-note input-icon js-btn-calendar"></i>
-                                </div>
-                            </div>
+
                             <div class="col-2">
                                 <div class="input-group">
                                     <div class="rs-select2 js-select-simple select--no-search">
                                         <select name="gender">
-                                            <option disabled="disabled" selected="selected">Género</option>
-                                            <option>Masculino</option>
-                                            <option>Femenino</option>
-                                            <option>Prefiero no decirlo</option>
+                                            <option disabled="disabled" selected="selected" id="genero" value="gender">Género</option>
+                                            <option value="Masculino">Masculino</option>
+                                            <option value="Femenino">Femenino</option>
+                                            <option value="Prefiero no decirlo">Prefiero no decirlo</option>
                                         </select>
                                         <div class="select-dropdown"></div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="input-group">
-                            <div class="rs-select2 js-select-simple select--no-search">
-                                <select name="class">
-                                    <option disabled="disabled" selected="selected">Capacidad de Tinaco</option>
-                                    <option>450 L</option>
-                                    <option>600 L</option>
-                                    <option>750 L</option>
-                                    <option>1100 L</option>
-                                    <option>2500 L</option>
-                                </select>
-                                <div class="select-dropdown"></div>
-                            </div>
-                        </div>
+
                         <div class="row row-space">
                             <div class="col-2">
                                 <div class="input-group">
