--- a/api/static/css/templatemo-breezed.css
+++ b/api/static/css/templatemo-breezed.css
@@ -199,6 +199,10 @@ a.main-button-icon {
   -moz-transition: all 0.3s ease 0s;
   -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
+  display: flex;
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
 }
 
 a.main-button-icon i {
