--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -208,10 +208,11 @@ https://templatemo.com/tm-543-breezed
                 </div>
                 <div class="col-lg-6 col-md-6 col-xs-12">
                     <div class="right-text-content">
-                        <p><a rel="nofollow noopener" 
-                                target="_parent">Te proporcionamos reportes PDF con el tiempo de llenado, y el día en que usaste la aplicación!
+                        <h4><a rel="nofollow noopener" 
+                                target="_parent">Te proporcionamos información de como utilizar la APP, aquí puedes platicar con nuestro ChatBot!
                           
-                        </p>
+                        </h4>
+                        <iframe width="500" height="800" allow="microphone;" src="https://console.dialogflow.com/api-client/demo/embedded/8ad7533d-50da-4daf-af00-baefb173457c"></iframe>
                     </div>
                 </div>
             </div>
