--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -212,7 +212,8 @@ https://templatemo.com/tm-543-breezed
                                 target="_parent">Te proporcionamos información de como utilizar la APP, aquí puedes platicar con nuestro ChatBot!
                           
                         </h4>
-                        <iframe width="500" height="800" allow="microphone;" src="https://console.dialogflow.com/api-client/demo/embedded/8ad7533d-50da-4daf-af00-baefb173457c"></iframe>
+                        <iframe width="500" height="500" allow="microphone;" 
+                        src="https://console.dialogflow.com/api-client/demo/embedded/8ad7533d-50da-4daf-af00-baefb173457c"></iframe>
                     </div>
                 </div>
             </div>
